--- a/Templates/available.html
+++ b/Templates/available.html
@@ -12,7 +12,7 @@
 {% block body %}
 <table>
             <tr>
-                <th>MOVIE NAME</th>
+                <th>MOVIE name</th>
                 <th>MOVIE ACTOR</th>
                 <th>MOVIE YEAR</th>
                 <th>GENRE</th>
